--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,32 @@
 name: OWASP-Juice-Shop-Automation | Python Selenium Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - dev
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: testenv
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9' 
+
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Build and run Juice Shop Docker container
       run: |
@@ -32,5 +50,12 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
+      env:
+        INVALID_EMAIL: ${{ secrets.INVALID_EMAIL }}
+        INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
+        EMAIL: ${{ secrets.EMAIL }}
+        PASSWORD: ${{ secrets.PASSWORD }}
+        SQL_EMAIL: ${{ secrets.SQL_EMAIL }}
+        XSS_SCRIPT: ${{ secrets.XSS_SCRIPT }}
       run: |
         pytest -s
