--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-name: OWASP-Juice-Shop-Automation | Python Selenium Tests
+name: OWASP-Juice-Shop-Automation | Playwright Tests
 
 on:
   push:
     branches:
-      - dev
       - main
 
 jobs:
@@ -12,50 +11,52 @@ jobs:
     environment: testenv
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9' 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
 
-    - name: Cache pip
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-    - name: Build and run Juice Shop Docker container
-      run: |
-        docker pull bkimminich/juice-shop
-        docker run -d --name juice-shop -p 3000:3000 bkimminich/juice-shop
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Wait for Juice Shop to be ready
-      run: |
-        for i in {1..30}; do
-          curl -sSf http://localhost:3000 && break || echo "Waiting for Juice Shop to be ready..."
-          sleep 10
-        done
+      - name: Build and run Juice Shop Docker container
+        run: |
+          docker pull bkimminich/juice-shop
+          docker run -d --name juice-shop -p 3000:3000 bkimminich/juice-shop
 
-    - name: List repository files for debugging
-      run: |
-        ls -R
+      - name: Wait for Juice Shop to be ready
+        run: |
+          for i in {1..30}; do
+            curl -sSf http://localhost:3000 && break || echo "Waiting for Juice Shop to be ready..."
+            sleep 10
+          done
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Run tests
+        env:
+          INVALID_EMAIL: ${{ secrets.INVALID_EMAIL }}
+          INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
+          EMAIL: ${{ secrets.EMAIL }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          SQL_EMAIL: ${{ secrets.SQL_EMAIL }}
+          XSS_SCRIPT: ${{ secrets.XSS_SCRIPT }}
+        run: |
+          pytest -s --html=report.html --self-contained-html
 
-    - name: Run tests
-      env:
-        INVALID_EMAIL: ${{ secrets.INVALID_EMAIL }}
-        INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
-        EMAIL: ${{ secrets.EMAIL }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-        SQL_EMAIL: ${{ secrets.SQL_EMAIL }}
-        XSS_SCRIPT: ${{ secrets.XSS_SCRIPT }}
-      run: |
-        pytest -s
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: report.html
