Added --with-deps to install any dependencies required by the browsers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install Playwright Browsers
         run: |
-          python -m playwright install
+          python -m playwright install --with-deps
 
       - name: Build and run Juice Shop Docker container
         run: |
